# ro9scrapers

./: extract_headers_cookies.py  hello.py  pyproject.toml
azquotes.com/: main.py  pyproject.toml
griffith.edu.au/: cookies_headers.json  main.py  pyproject.toml
ibuildnew.com.au/: hello.py  ibn_00.py  pyproject.toml  tables.py
journals_scraper/: cookies_headers.json  domains_cookies.json  journals_collection.json  links.json  main.py  pyproject.toml  tesdata.py
lineageos.org/: devices.py  hello.py  pyproject.toml
sec.gov/: cookies.json  headers.json  hello.py  pyproject.toml  sec_00.py  sec_01.py  sec_02.py
