[project]
name = "ro9scrapers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "extruct>=0.18.0",
    "nodriver>=0.39",
    "parsel>=1.10.0",
    "python-dotenv>=1.0.1",
    "rich>=13.9.4",
    "tls-client>=1.0.1",
]

[tool.uv.workspace]
members = ["griffith.edu.au", "ibuildnew.com.au", "journals_scraper", "sec.gov", "lineageos.org"]
